--- a/IndustrialServices/Views/Artikel/Create.cshtml
+++ b/IndustrialServices/Views/Artikel/Create.cshtml
@@ -1,5 +1,147 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
+﻿@{
+    Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
+    ViewData["Title"] = "Add Article";
 }
+
+<div class="pagetitle">
+    <h1>- Add Article -</h1>
+</div>
+<br />
+
+<section class="section">
+    <div class="row">
+        <div class="col-lg-12">
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">Please Fill it in Correctly!</h5>
+                    <hr />
+                    <br />
+
+                    <!-- Form to add article data -->
+                    <form method="post" enctype="multipart/form-data" id="articleForm">
+                        <input type="text" class="form-control" name="id_pengelola" id="id_pengelola" value=3 hidden>
+                        <div class="row mb-3">
+                            <label for="tanggal_rilis" class="col-sm-2 col-form-label">Date of Release</label>
+                            <div class="col-sm-10">
+                                <input type="text" class="form-control" name="tanggal_rilis" id="tanggal_rilis" disabled>
+                            </div>
+                        </div>
+                        <div class="row mb-3">
+                            <label for="judul_artikel" class="col-sm-2 col-form-label">Article Title</label>
+                            <div class="col-sm-10">
+                                <input type="text" class="form-control" name="judul_artikel" id="judul_artikel">
+                            </div>
+                        </div>
+                        <div class="row mb-3">
+                            <label for="sampul_artikel" class="col-sm-2 col-form-label">Article Cover</label>
+                            <div class="col-sm-10">
+                                <input class="form-control" type="file" name="sampul_artikel" id="sampul_artikel">
+                            </div>
+                        </div>
+                        <div class="row mb-3">
+                            <label for="isi_artikel" class="col-sm-2 col-form-label">Article Content</label>
+                            <div class="col-sm-10">
+                                <textarea class="form-control" name="isi_artikel" id="isi_artikel" rows="10"></textarea>
+                            </div>
+                        </div>
+                        <div class="row mb-3">
+                            <div class="col-sm-10">
+                                <input class="form-control" id="status" name="status" value="1" hidden />
+                            </div>
+                        </div>
+                        <br />
+                        <br />
+                        <div class="row mb-3">
+                            <div class="col-sm-10">
+                                <button type="button" class="btn btn-danger" onclick="cancel()">Cancel</button>
+                                <button type="submit" class="btn btn-primary" onclick="simpan()">Submit</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+
+<script>
+    function simpan() {
+        var check = 0;
+        var id_pengelola = document.getElementById("id_pengelola").value;
+        var judul_artikel = document.getElementById("judul_artikel").value;
+        var isi_artikel = document.getElementById("isi_artikel").value;
+        var sampul_artikel = document.getElementById("sampul_artikel").value;
+        var status = document.getElementById("status").value;
+        var tanggal_rilis = document.getElementById("tanggal_rilis").value;
+
+        var sampulartikel = document.getElementById("sampul_artikel").files[0];
+
+        var hostname = "https://localhost:7033/"; 
+        var url = hostname + "InsertArtikel"; 
+        var method = "POST";
+        var input = {
+            id_pengelola: id_pengelola,
+            judul_artikel: judul_artikel,
+            isi_artikel: isi_artikel,
+            sampul_artikel: sampul_artikel,
+            status: status,
+            tanggal_rilis: tanggal_rilis
+        };
+
+        $.ajax({
+            url: url,
+            method: method,
+            data: JSON.stringify(input),
+            contentType: "application/json",
+            success: function (data) {
+                check = 1;
+
+                if (check == 1) {
+
+                    uploadFoto(sampulartikel);
+                }
+            },
+            error: function (xhr, status, error) {
+                alert("Terjadi kesalahan saat menyimpan artikel.");
+            }
+        });
+    }
+
+    function uploadFoto(file) {
+        var formData = new FormData();
+        formData.append('sampulartikel', file);
+
+        $.ajax({
+            url: '/Artikel/UploadPhoto',
+            method: 'POST',
+            data: formData,
+            contentType: false, // false agar FormData menentukan Content-Type
+            processData: false, // false agar FormData tidak diproses
+            success: function (response) {
+                alert('   ');   
+                window.location.href = '/Artikel/Index';
+            },  
+            error: function (error) {
+                console.log(error);
+            }
+        });
+    }
+
+    function cancel() {
+        document.getElementById("judul_artikel").value = "";
+        document.getElementById("isi_artikel").value = "";
+    }
+
+
+
+    document.addEventListener("DOMContentLoaded", function () {
+        var today = new Date();
+
+        // Mendapatkan tanggal dalam format yang dapat dimasukkan ke dalam database (yyyy-MM-dd)
+        var formattedDate = today.toLocaleDateString('en-CA'); // 'en-CA' adalah kode untuk format 'yyyy-MM-dd'
+
+        // Set nilai default pada input tanggal dengan id "tanggal_rilis"
+        document.getElementById('tanggal_rilis').value = formattedDate;
+    });
+</script>
