--- a/IndustrialServices/Views/FacultyMember/Index.cshtml
+++ b/IndustrialServices/Views/FacultyMember/Index.cshtml
@@ -65,7 +65,6 @@
         var hostname = "https://localhost:7033/"; // Ganti dengan URL API Anda
         var url = hostname + "InsertFacultyMember"; // Sesuaikan dengan endpoint Anda
         var method = "POST";
-
         var input = {
             npk: npk,
             nama_pengajar: nama_pengajar,
@@ -104,7 +103,6 @@
             contentType: false, // false agar FormData menentukan Content-Type
             processData: false, // false agar FormData tidak diproses
             success: function (response) {
-                alert('   ');
                 window.location.href = '/FacultyMember/Index';
             },
             error: function (error) {
@@ -241,8 +239,16 @@
             success: function (data) {
                 check = 1;
 
+                if(fotopengajar == null){
+                    check = 2
+                }
+
                 if (check == 1) {
                     uploadFoto(fotopengajar);
+                }
+
+                if(check == 2){
+                    window.location.href = '/FacultyMember/Index';
                 }
 
             },
