--- a/IndustrialServices/Views/Shared/_LayoutAdmin.cshtml
+++ b/IndustrialServices/Views/Shared/_LayoutAdmin.cshtml
@@ -97,7 +97,7 @@
 
             <li class="nav-item">
                 <a class="nav-link collapsed" asp-action="Index" asp-controller="Artikel">
-                    <i class="bi bi-people-fill"></i>
+                    <i class="fa-regular fa-newspaper"></i>
                     <span>Article</span>
                 </a>
             </li>
