--- a/IndustrialServices/Views/DashboardCRUD/Index.cshtml
+++ b/IndustrialServices/Views/DashboardCRUD/Index.cshtml
@@ -4,20 +4,14 @@
 @{
     Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
-<section id="hero">
-    <section id="home" class="home">
-        <div class="container" id="body-page">
-            <div class="container">
-                <div class="row">
-                <div class="col-lg-12 d-flex align-items-stretch">
-                                        <h4>Welcome to Managing Data Side of Industrial Services Website of AstraTech</h4>
-                </div>
-                </div>
-                    </div>
+
+
+            <div class="container-md" style="padding:60px;background-color:lightgray">
+                <div class="container-fluid">
+                    <h1 style="padding-bottom:10px; font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif">Welcome to Industrial Services Website Management Data Side!</h1>
+                    <p class="lead">This is the home page of Industrial Services Management Data Side, please access the menu available on the menu bar on the left side of the page.</p>
                 </div>
 
             </div>
 
         </div>
-    </section>
-</section>
