--- a/IndustrialServices/Views/Shared/_LayoutAdmin.cshtml
+++ b/IndustrialServices/Views/Shared/_LayoutAdmin.cshtml
@@ -102,18 +102,17 @@
                 </a>
             </li>
 
-
             <li class="nav-item">
-                <a class="nav-link collapsed" href="#">
-                    <i class="bi bi-calendar3"></i>
-                    <span>Calendar of Events</span>
+                <a class="nav-link collapsed" asp-action="Index" asp-controller="DPP">
+                    <i class="bi bi-building"></i>
+                    <span>Department of Training and Production</span>
                 </a>
             </li>
 
             <li class="nav-item">
                 <a class="nav-link collapsed" href="#">
-                    <i class="bi bi-building"></i>
-                    <span>Department of Training and Production</span>
+                    <i class="bi bi-calendar3"></i>
+                    <span>Calendar of Events</span>
                 </a>
             </li>
 
