--- a/IndustrialServices/Views/Artikel/Detail.cshtml
+++ b/IndustrialServices/Views/Artikel/Detail.cshtml
@@ -4,7 +4,7 @@
 }
 
 <div class="pagetitle">
-    <h1>- Edit Article -</h1>
+    <h1>- Article Details -</h1>
 </div>
 <br />
 
@@ -13,7 +13,7 @@
         <div class="col-lg-12">
             <div class="card">
                 <div class="card-body">
-                    <h5 class="card-title">Please Fill it in Correctly!</h5>
+                    <h5 class="card-title">Article Detail View</h5>
                     <hr />
                     <br />
 
