--- a/IndustrialServices/Views/Artikel/Create.cshtml
+++ b/IndustrialServices/Views/Artikel/Create.cshtml
@@ -53,6 +53,7 @@
                         <br />
                         <div class="row mb-3">
                             <div class="col-sm-10">
+                                <a class="btn btn-secondary" asp-action="Index" asp-controller="Artikel">Back</a>
                                 <button type="button" class="btn btn-danger" onclick="cancel()">Cancel</button>
                                 <button type="submit" class="btn btn-primary" onclick="simpan()">Submit</button>
                             </div>
