--- a/IndustrialServices/Views/Artikel/Detail.cshtml
+++ b/IndustrialServices/Views/Artikel/Detail.cshtml
@@ -53,6 +53,8 @@
                     </div>
                     <br />
                     <br />
+
+                    <a class="btn btn-secondary" asp-action="Index" asp-controller="Artikel">Back</a>
                 </div>
             </div>
         </div>
