--- a/IndustrialServices/Views/Artikel/Draft.cshtml
+++ b/IndustrialServices/Views/Artikel/Draft.cshtml
@@ -4,7 +4,7 @@
 }
 
 <div class="pagetitle">
-    <h1>- Edit Article -</h1>
+    <h1>- Detail Article -</h1>
 </div>
 <br />
 
@@ -65,6 +65,7 @@
                                 <button type="submit" class="btn btn-primary" onclick="simpanEdit()">Submit</button>
                             </div>
                         </div>
+                    <a class="btn btn-secondary" asp-action="Index" asp-controller="Artikel">Back</a>
                 </div>
             </div>
         </div>
