--- a/IndustrialServices/Views/DashboardCRUD/Index.cshtml
+++ b/IndustrialServices/Views/DashboardCRUD/Index.cshtml
@@ -3,6 +3,7 @@
 *@
 @{
     Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
+    ViewData["Title"] = "Dashboard";
 }
 
 
@@ -11,7 +12,5 @@
                     <h1 style="padding-bottom:10px; font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif">Welcome to Industrial Services Website Management Data Side!</h1>
                     <p class="lead">This is the home page of Industrial Services Management Data Side, please access the menu available on the menu bar on the left side of the page.</p>
                 </div>
-
             </div>
 
-        </div>
